# 2nd_Course

./: .gitmodules  README.md
 Bitonic_Sort/: Bitonic_sort.cpp  Bitonic_sort.h  CMakeLists.txt  bitonic_sort.cl  main.cpp
 Bitonic_Sort/OpenCL-CLHPP/include/CL/: opencl.hpp
 Bitonic_Sort/archive/: CLWrapper.cpp  CLWrapper.hpp
 Bitonic_Sort/archive/include/: ClWrapper.h
 Bitonic_Sort/archive/source/: ClWrapper.cpp
 Bitonic_Sort/test/: test_sort.cpp
2Q/: 2Q.h  2Q.hpp  2Q.inl  AlgBelady.hpp  Belady.cpp  MakeFile.txt  MakeTests.txt  TestGenerator.cpp  TestGenerator.h  main.cpp  tests.cpp
Matrix/: CMakeLists.txt  Graph.hpp  Matrix.hpp  main.cpp  test.txt
Matrix/test/: test_generator.hpp  test_graph.cpp  test_matrix.cpp
Matrix/test/FileTest/: test1.in  test2.in  test3.in  test3.out  test4.in  test4.out  test5.in
Matrix/test/FileTestForGraph/: test1.in  test1.out  test2.in  test2.out  test3.in  test3.out
ParaCL/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
ParaCL/Test/: test_lexer.cpp  test_parser.cpp
ParaCL/Test/FileTests/: test1.cl  test2.cl  test3.cl  test4.cl  test5.cl  test5.in  test5.out
TestVulkan/: CMakeLists.txt  Vulkan.cpp  Vulkan.h  main.cpp
numgrammar/: CMakeLists.txt  grammar.txt  numdriver.hpp  numgrammar.l  numgrammar.y  numtest.txt  start.sh
triangle/: CMakeLists.txt  IntersectionTriangles.cpp  IntersectionTriangles.h  Triangle.cpp  Triangle.h  a.out  main.cpp
triangle/Test/: test_generator.cpp  test_generator.h  test_intersection.cpp  test_triangle.cpp  tmp.txt
triangle/Test/FileTests/: test0.in  test1.in  test1.out  test10000.out  test1000_3.in  test1000_3.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
